increase bottom spacing on mobile

--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -11,7 +11,7 @@ footer {
   @media (max-width: 768px) {
     padding: 1.5rem 0;
     margin-top: 2rem;
-    margin-bottom: 3rem; // Extra bottom margin on mobile
+    margin-bottom: 5rem; // Significantly increased bottom margin on mobile
   }
 }
 
