--- a/src/app/components/hero/hero.scss
+++ b/src/app/components/hero/hero.scss
@@ -44,7 +44,7 @@
 @media (max-width: 768px) {
   .hero {
     padding: 3rem 2rem;
-    padding-bottom: 10rem; // Significantly increased bottom spacing on mobile
+    padding-bottom: 15rem; 
   }
 
   .hero-content {
@@ -58,6 +58,6 @@
   }
 
   .hero-buttons {
-    margin-bottom: 4rem; // Increased bottom margin
+    margin-bottom: 5rem;
   }
 }
